--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,6 +4,12 @@
     * {
 font-family: 'Roboto', sans-serif;
     }
+
+    p{
+    text-align: center;
+    margin: 12px;
+    margin-top: 0;
+    }
 </style>
 
 
@@ -14,10 +20,17 @@ font-family: 'Roboto', sans-serif;
         <% item_group.each do |item| %>
             <td style="border: 1px black dashed">
                 <h1 style="text-align: center; vertical-align: top; margin: 12; margin-bottom: 0;"> $<%= sprintf "%.2f", item.price_cents / 100.0 %> </h1>
-                <% qrcode = RQRCode::QRCode.new(item_url(item)) %>
-                <img src="<%= qrcode.as_png(size:150,border_modules: 2, color: 'black').to_data_url %>" />
-                <p style="margin: 12; margin-top: 0; text-align: center;">Scan this code <br> for more info <br><br> <span style="color: grey; max-width: 150px; "> <%= item.title %> </span></p>
-            </td>
+                
+                <% if item.use_qr %>
+                    <% qrcode = RQRCode::QRCode.new(item_url(item), mode: :byte_8bit) %>
+                    <div style="text-align: center;" >
+                        <img src="<%= qrcode.as_png(size:100,border_modules: 2, color: 'black').to_data_url %>" />
+                    </div>
+                    <p style="font-size: 8;">Scan this code <br> for more info</p>
+                <% end %>
+
+                <p> <%= item.title %> </p>
+
         <% end %>
     </tr>
 <% end %>
