--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,6 +25,8 @@
 
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
     *{
         font-family: 'Roboto', sans-serif;
